tests/sources/invalid/classes/constructor_param_array_unsupported.fire
// Parser error: constructor parameter with an array type, which is not
// supported for class methods/constructors.

class Foo {
    int32 x;

    Foo(int32[] xs) {  //~ ERROR FS-PARSE-0012 @14
        this.x = xs[0];  //~ ERROR FS-PARSE-0003 @18
    }
}
